# BMT-API

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: deploy-railway.yml  seed-vendor.yml  smoke-test-live-api.yml
apps/api/: main.py
apps/worker/: main.py
docs/engineering/: database_setup.md  foundation.md  hosted_deploy.md
migrations/: env.py
migrations/versions/: 20260410_0001_initial_core_schema.py  20260410_0002_browser_fetch_leasing.py  20260410_0003_crawl_job_retries.py  (+1 more)
scripts/: db_upgrade.py  seed_vendor.py
tests/: test_admin_actions.py  test_admin_agent_ops_routes.py  test_admin_discovery_review_routes.py  test_admin_discovery_routes.py  test_admin_entity_resolution_routes.py  test_admin_routes.py  test_admin_source_registry_routes.py  test_agent_eval_routes.py  test_agent_evaluator.py  test_agent_run_store.py  test_agents_routes.py  test_browser_fetcher.py  test_claim_normalizer.py  test_claim_scorer.py  test_claim_synthesizer.py  test_claim_verifier.py  test_compare_routes.py  test_compare_service.py  test_discovery_runs_history_routes.py  test_domain_discovery.py  test_evidence_critic_agent.py  test_evidence_extractors.py  test_gap_detector.py  test_health.py  test_job_leasing.py  test_page_classifier.py  test_product_intelligence.py  test_product_routes.py  test_settings_aliases.py  test_source_planner_agent.py  test_source_planner_persistence.py  test_source_planner_ranker.py  test_source_promotion.py  test_source_promotion_routes.py  test_tracing.py
(+12 files in other folders)
